<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/batteryPercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/battery_percentage"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/batteryStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/batteryPercentageTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/battery_status"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/batteryVoltageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/batteryPercentageTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/battery_voltage"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/batteryTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/batteryPercentageTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/battery_temperature"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/batteryHealthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/batteryPercentageTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:text="@string/battery_health"
        android:textSize="20sp" />


</RelativeLayout>